<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    tools:context=".TtcActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/ttc"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/resultatTTC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3">

        <EditText
            android:id="@+id/prixTTC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prixHT"
            android:inputType="number" />

        <EditText
            android:id="@+id/tauxTVA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prixTTC"
            android:ems="10"
            android:hint="@string/tauxTVA"
            android:inputType="number" />

        <Button
            android:id="@+id/calculTVA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tauxTVA"
            android:layout_centerHorizontal="true"
            android:text="calcul" />
    </RelativeLayout>

</LinearLayout>